--- a/s.yaml
+++ b/s.yaml
@@ -28,19 +28,13 @@ services:
         caPort: 9000
         customRuntimeConfig:
           command:
-            - npm
+            - node
           args:
-            - run
-            - start
+            - api/pinyin-api.js
       triggers:
         - name: httpTrigger
           type: http
           config:
             authType: anonymous
             methods:
-              - GET
               - POST
-              - PUT
-              - DELETE
-              - HEAD
-              - PATCH
