--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "pinyin": "^2.9.1"
+    "pinyin": "^2.9.1",
+    "serverless-http": "^3.2.0"
   }
 }
